--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BrotherPrinterSample</string>
     <string name="test">Test</string>
+    <string name="test_zebra">Test Zebra</string>
+    <string name="test_brother">Test Brother</string>
 </resources>
