--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="test">Test</string>
     <string name="test_zebra">Test Zebra</string>
     <string name="test_brother">Test Brother</string>
+    <string name="bt_device">BT Device:</string>
+    <string name="connect_device">Connect Device</string>
+    <string name="button_refresh">Refresh</string>
+    <string name="no_bluetooth_device">No Devices</string>
+    <string name="not_connected">Not connected</string>
 </resources>
