--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="barcode_input">123456789</string>
     <string name="brother_log_output">Brother Log output:</string>
     <string name="clear">Clear</string>
+    <string name="test_citizen">Test Citizen</string>
 </resources>
