--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="brother_log_output">Brother Log output:</string>
     <string name="clear">Clear</string>
     <string name="test_citizen">Test Citizen</string>
+    <string name="test_tsc">Test TSC</string>
+    <string name="test_xprinter">Test Rongta</string>
 </resources>
